--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".history.HistoryFragment">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,6 +15,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/txt_my_history"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +28,18 @@
                 android:layout_marginTop="30dp"
                 />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_history"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/txt_my_history"
+                android:layout_marginTop="30dp"
+                tools:listitem="@layout/item_history_recycler"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
