--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,32 +6,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.FragmentHome">
 
+    <TextView
+        android:id="@+id/appTitle"
+        android:layout_width="match_parent"
+        android:layout_height="62dp"
+        android:gravity="center"
+
+        android:paddingVertical="10dp"
+
+        android:background="@color/white"
+        app:itemBackground="@color/white"
+
+        android:text="청바지"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="25dp">
 
-        <TextView
-            android:id="@+id/appTitle"
-            android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:gravity="center"
 
-            android:paddingVertical="10dp"
-
-            android:text="청바지"
-            android:textColor="@color/black"
-            android:textSize="24dp"
-            android:textStyle="bold" />
 
         <ViewFlipper
             android:id="@+id/viewFlipper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="80dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="60dp"
             >
 
             <TextView
@@ -59,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="40dp"
             android:elevation="30dp"
             android:background="@drawable/home_add_btn"
             android:text="여행 추가하기"
@@ -80,23 +85,31 @@
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:orientation="vertical"-->
-<!--                android:background="@color/white">-->
+            <LinearLayout
+                android:id="@+id/notMyHomeList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
-<!--                <TextView-->
-<!--                    android:id="@+id/textView3"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
 
-<!--                    android:gravity="center"-->
-<!--                    android:text="아직 준비 중인 여행이 없어요\n저희가 추천해드릴게요!"-->
-<!--                    android:textSize="18dp"-->
-<!--                    android:textColor="@color/black"/>-->
-<!--            </LinearLayout>-->
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/trip"
+                    />
+
+                <TextView
+                    android:id="@+id/ifNullText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="아직 준비 중인 여행이 없어요\n저희가 추천해드릴게요!"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
 
         </FrameLayout>
 
