--- a/app/src/main/res/layout/item_recom_card.xml
+++ b/app/src/main/res/layout/item_recom_card.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/country" />
 
     <TextView
-        android:id="@+id/country"
+        android:id="@+id/spot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -30,16 +30,12 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="40dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/like_button"
-        android:text="좋아요"
-        android:textColor="@color/mainColor"
-        android:textSize="10dp"
-        app:layout_constraintStart_toStartOf="@+id/country"
-        app:layout_constraintTop_toBottomOf="@+id/country" />
+    <TextView
+        android:id="@+id/comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/spot"
+        app:layout_constraintLeft_toLeftOf="@+id/spot"
+        android:text="asdsadsa"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
