--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,7 +60,7 @@
     </ViewFlipper>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addTourBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
