--- a/app/src/main/res/layout/item_recom_card.xml
+++ b/app/src/main/res/layout/item_recom_card.xml
@@ -38,4 +38,15 @@
         app:layout_constraintLeft_toLeftOf="@+id/spot"
         android:text="asdsadsa"
         />
+
+    <View
+        android:layout_marginTop="5dp"
+        android:id="@+id/toolbar_line"
+        android:foregroundGravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#D9D9D9"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
