--- a/app/src/main/res/layout/recommend.xml
+++ b/app/src/main/res/layout/recommend.xml
@@ -76,10 +76,12 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_btm_nav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:itemBackground="@color/white"
+        android:layout_height="65dp"
+        android:background="@color/mainColor"
         app:labelVisibilityMode="labeled"
+        app:itemIconSize="30dp"
+        app:itemIconTint="@drawable/menu_selector_color"
+        app:itemTextColor="@drawable/menu_selector_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_main_bottom_nav" />
 
