Revert "Merge branch 'master' of https://github.com/ehyeok9/kokoton"
This reverts commit f18b7a2e98af15226f74da5b87a88e4efde7d845, reversing
changes made to ab863da88a44c8e96c61d572855f444ab3f37ba6.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:background="@color/mainColor"
         app:labelVisibilityMode="labeled"
         app:itemIconSize="30dp"
+        style="@style/BottomNavigationView"
         app:itemIconTint="@drawable/menu_selector_color"
         app:itemTextColor="@drawable/menu_selector_color"
         app:layout_constraintBottom_toBottomOf="parent"
