--- a/app/src/main/res/layout/activity_country_choice.xml
+++ b/app/src/main/res/layout/activity_country_choice.xml
@@ -107,13 +107,12 @@
         android:id="@+id/country_choice_rv_result"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/country_choice_layout_search"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/country_choice_layout_search" />
 
 
 
