--- a/app/src/main/res/layout/activity_date_choice.xml
+++ b/app/src/main/res/layout/activity_date_choice.xml
@@ -64,38 +64,36 @@
         android:id="@+id/date_choice_layout_action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/date_choice_tv_sub_title"
+        android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/date_choice_tv_sub_title">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/date_choice_tv_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="16dp"
-            android:gravity="center"
-            android:textSize="18dp"
-            android:textColor="@color/black"
             android:background="@drawable/bg_disable"
+            android:gravity="center"
+            android:paddingVertical="16dp"
             android:text="@string/date_choice_tv_no"
-            />
+            android:textColor="@color/black"
+            android:textSize="18dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/date_choice_tv_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_disable"
-            android:textColor="@color/black"
-            android:gravity="center"
             android:layout_marginTop="16dp"
+            android:background="@drawable/bg_disable"
+            android:gravity="center"
             android:paddingVertical="16dp"
             android:text="@string/date_choice_tv_yes"
-            android:textSize="18dp"
-            />
+            android:textColor="@color/black"
+            android:textSize="18dp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
