--- a/app/src/main/res/layout/recommend_viewpager.xml
+++ b/app/src/main/res/layout/recommend_viewpager.xml
@@ -19,8 +19,7 @@
             android:src="@drawable/france"
             android:scaleType="fitXY"
             android:layout_width="250dp"
-            android:layout_height="350dp"
-            tools:ignore="MissingConstraints" />
+            android:layout_height="350dp" />
 
         <TextView
             android:paddingLeft="5dp"
