--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:background="@color/greyWhit"
         android:id="@+id/main_frm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
