--- a/app/src/main/res/layout/activity_recom_list.xml
+++ b/app/src/main/res/layout/activity_recom_list.xml
@@ -70,11 +70,8 @@
       app:layout_constraintStart_toEndOf="@+id/textView2" />
 
   <FrameLayout
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="0dp"
-      android:layout_marginStart="15dp"
-      android:layout_marginTop="20dp"
-      android:layout_marginEnd="15dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
