--- a/app/src/main/res/layout/item_recom_card.xml
+++ b/app/src/main/res/layout/item_recom_card.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/rec_radius_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,30 +24,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
         android:text="에펠탑"
         android:textColor="@color/black"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="6dp"
+        android:textStyle="normal"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spot"
         app:layout_constraintLeft_toLeftOf="@+id/spot"
-        android:text="asdsadsa"
+        android:text="sdfdsdsgdsgdsdsgdsfdsgdsgdsgdsgdsgdsgdssdsfewfewggdsg"
+        android:maxLines="3"
+        android:ellipsize="end"
         />
 
     <View
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/toolbar_line"
         android:foregroundGravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#D9D9D9"/>
+        android:layout_height="1dp"
+        android:background="#e9e9e9"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
